[gd_scene load_steps=2 format=3 uid="uid://02b7ntbeuddd"]

[ext_resource type="Script" uid="uid://eqvpen8lnc4" path="res://scenes/UI/pause_menu/pause_menu.gd" id="1_v7tp5"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7tp5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ViewMap" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "View Map"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit To Menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/ViewMap" to="." method="_on_view_map_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
